fix(grid): remove cells text alignment inheritance

--- a/packages/core/scss/components/grid/_layout.scss
+++ b/packages/core/scss/components/grid/_layout.scss
@@ -93,7 +93,6 @@
             border-color: inherit;
             outline: 0;
             font-weight: inherit;
-            text-align: inherit;
             position: static;
             overflow: hidden;
             text-overflow: ellipsis;
