--- a/packages/fluent/scss/grid/_layout.scss
+++ b/packages/fluent/scss/grid/_layout.scss
@@ -78,7 +78,6 @@
             border-color: inherit;
             outline: 0;
             font-weight: inherit;
-            text-align: inherit;
             position: static;
             overflow: hidden;
             text-overflow: ellipsis;
